deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: python-garbage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rage-gauge
  namespace: python-garbage
  labels:
    app: rage-gauge
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: rage-gauge
  replicas: 1
  template:
    metadata:
      labels:
        app: rage-gauge
    spec:
      containers:
        - name: main
          image: docker.fndk.io/other/rage-gauge-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
        - name: front
          image: docker.fndk.io/other/rage-gauge-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rage-gauge
  namespace: python-garbage
  labels:
    app: rage-gauge
spec:
  ports:
    - name: websocket
      port: 8765
      targetPort: 8765
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: rage-gauge
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rage-gauge-ingress
  namespace: python-garbage
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: rage-gauge.fndk.io
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: rage-gauge
                port:
                  name: websocket
    - host: rage-gauge.fndk.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rage-gauge
                port:
                  name: http
  tls:
    - secretName: rage-gauge.fndk.io
      hosts:
        - rage-gauge.fndk.io
